contrast issue again fixed

--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,9 @@ body {
 
 @media only screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
   /* styles specifically for iPhone SE */
-  .bottom-26 {
-    bottom: calc(var(--spacing) * 4) /* 5rem = 80px */;
+.bottom-26 {
+    bottom: calc(var(--spacing) * 100) /* 6.5rem = 104px */;
 }
-
 .h-32 {
     height: calc(var(--spacing) * 24) /* 8rem = 128px */;
 }
